# proton-drive-sync

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
packaging/systemd/: README.md  install-service.sh  proton-drive-sync.service  proton-drive-sync@.service
src/: auth.rs  config.rs  dashboard.rs  db.rs  error.rs  lib.rs  logger.rs  main.rs  paths.rs  processor.rs  proton.rs  queue.rs  sync.rs  types.rs  watcher.rs
src/cli/: auth.rs  config.rs  dashboard.rs  logs.rs  mod.rs  pause.rs  reconcile.rs  reset.rs  resume.rs  setup.rs  start.rs  status.rs  stop.rs
