[package]
name = "proton-drive-sync"
version = "0.1.0"
edition = "2021"
description = "Sync local files to Proton Drive"
license = "AGPL-3.0"
repository = "https://codeberg.org/rashomon/proton-drive-sync"
authors = ["Shawon Ashraf <shawon.ashraf@outlook.com>"]

[[bin]]
name = "proton-drive-sync"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (macros disabled to avoid compile-time checking)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"], default-features = false }

# Cryptography
# sequoia-openpgp = "0.11"  # Disabled: requires nettle-dev, implement PGP separately if needed
bcrypt = "0.16"
rand = "0.8"

# File system
notify = "6.1"
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Configuration
dirs = "5.0"

# Keyring for secure storage
keyring = "3.0"

# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
glob = "0.3"
regex = "1.11"
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
hex = "0.4"
mime_guess = "2.0"

# SRP implementation
digest = "0.10"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
